--- a/style.css
+++ b/style.css
@@ -380,6 +380,12 @@ header .icons #menu-bars {
     justify-content: center;
 }
 
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 
 
