--- a/style.css
+++ b/style.css
@@ -126,6 +126,27 @@ header .icons #menu-bars {
 }
 
 
+.grid-container {
+    display: grid;
+    height: 400px;
+    align-content: start;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    padding: 10px;
+}
+  
+.grid-container > div {
+    background-color: rgb(12, 12, 12);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+    border-radius: 20px;
+}
+
+.grid-box {
+    align-content: center;
+}
+
 .home {
     padding: 0;
 }
@@ -189,94 +210,6 @@ header .icons #menu-bars {
     color: #fff;
     text-decoration: none;
 
-}
-
-.action {
-    padding: 5rem;
-}
-
-.action .box {
-    width: 299px;
-    height: 168px;
-}
-
-.action .content h3 {
-    font-size: 1.7rem;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.action .content P {
-    font-size: 1.2rem;
-    color: #fff;
-    text-decoration: none;
-
-}
-
-.child {
-    padding: 5rem;
-}
-
-.child .box {
-    width: 299px;
-    height: 168px;
-}
-
-.child .content h3 {
-    font-size: 1.7rem;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.child .content P {
-    font-size: 1.2rem;
-    color: #fff;
-    text-decoration: none;
-
-}
-
-
-.family {
-    padding: 5rem;
-}
-
-.family .box {
-    width: 299px;
-    height: 168px;
-}
-
-.family .content h3 {
-    font-size: 1.7rem;
-    color: #ffffff;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.family .content P {
-    font-size: 1.2rem;
-    color: #fff;
-    text-decoration: none;
-
-}
-
-.copyright {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-}
-
-.copyright .logo {
-    color: var(--red);
-    font-size: 2.1rem;
-    font-weight: bolder;
-}
-
-.copyright p {
-    font-size: 0.9rem;
-    color: var(--red);
-    font-size: 2rem;
 }
 
 
